fixed region mispeling

--- a/src/theme/templates/sales/curves.html
+++ b/src/theme/templates/sales/curves.html
@@ -11,7 +11,7 @@
       </p>
     </div>
     <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
-      <a href="{% url 'sales:status_overview' %}" class="btn btn-sm btn-outline w-full sm:w-auto">Estado por regi¢n/zona</a>
+      <a href="{% url 'sales:status_overview' %}" class="btn btn-sm btn-outline w-full sm:w-auto">Estado por región/zona</a>
       <a href="{% url 'sales:sales_by_zone' %}" class="btn btn-sm btn-secondary w-full sm:w-auto">Comparar por zona</a>
     </div>
   </div>
